# verifiers

./: .env.example  .gitignore  README.md  docker-compose.yml  dvc.yaml  notes.md  params.yaml  pyproject.toml  requirements-lock.txt  requirements.txt  ruff.toml
.dvc/: .gitignore  config
configs/: multigpu.yaml
data/: .gitignore
dockerfiles/: jupyter_codex.Dockerfile
dstacks/: .dstack.yml  README.md  predict.dstack.yml  train.dstack.yml  volume.dstack.yml
examples/: gsm8k_calculator.py  gsm8k_grpo.py  magent.py  magent_predict.py  magent_train.py  musique_agent.py  openbookqa_search.py  ragent.py  ragent_train.py
modals/: ragent_predict.py
nbs/: evaluate.ipynb  explore_code_executors.ipynb  explore_rerank.ipynb  explore_rerank_musique.ipynb  explore_rerank_service.ipynb  explore_rerankers.ipynb  explore_tool.ipynb  explore_triviaqa.ipynb  explore_wiki_search_service.ipynb  exps-2025-04-25.jsonl  exps-new.jsonl  exps-old.jsonl  exps.jsonl  inspect-preds.ipynb  inspect-results.ipynb  inspect-results2.ipynb  inspect.ipynb  prepare.ipynb  run.sh  scribble.ipynb  thinking-budget copy.ipynb  thinking-budget-prototype.ipynb  token_counting.ipynb  unsloth_grpo.ipynb  vllm-prefix.ipynb
nbs/full-val/: exps-new.jsonl  exps.jsonl  inspect-results.ipynb  prepare.ipynb  run.sh
nbs/musique-val/: exps-new.jsonl  exps.jsonl  inspect-preds.ipynb  inspect-results.ipynb  prepare.ipynb  run.sh
nbs/musique-val-mini/: exps-new.jsonl  exps-old.jsonl  exps.jsonl  inspect-preds.ipynb  inspect-results.ipynb  prepare.ipynb  run.sh
nbs/musique-val/exps/: bally-hake.json  banal-jags.json  baser-koas.json  boozy-bite.json  bosom-dawk.json  boxed-tils.json  briny-aces.json  brood-sech.json  comfy-vlei.json  dazed-stir.json  dizzy-sail.json  doped-rant.json  finer-byte.json  flush-boat.json  forky-cyst.json  fusil-mirk.json  glare-jabs.json  lardy-long.json  loony-walk.json  manly-lush.json  mardy-luce.json  (+18 more)
nbs/scribbles/: notes.md  scratchpad.md  workflow.md
nbs/triviaqa-val-mini/: inspect-preds.ipynb  inspect-results.ipynb  prepare.ipynb  run.sh
nbs/wiki-triviaqa-val-mini/: inspect-results.ipynb  prepare.ipynb  run.sh
scripts/: clear.py  evaluate.py  gsm8k_calculator.py  gsm8k_grpo.py  merge.py  musique_agent.py  preprocess_exps.py  ragent.py  ragent2.py  ragent_unsloth.py  setup.sh  wagent.py
services/rerank/: Dockerfile  app.py  docker-compose.yml  gunicorn.conf.py  logging.conf  main.py  requirements.txt
services/rerank-load-test/: locustfile.py  requirements.txt  run.sh
services/wiki_search/: Dockerfile  docker-compose.yml  main.py  requirements.txt
services/wikisearch/: Dockerfile  requirements.txt
src/verifiers/: api_llm.py  imports.py  mock_vllm.py  models.py  rerank.py  wiki_search.py
tests/: test_tool_rubric.py  test_vllm_chat.py  test_xmlparser.py
verifiers/envs/: multistep_env.py  tool_env.py
verifiers/examples/: gsm8k_calculator.py
verifiers/rubrics/: tool_rubric.py
verifiers/utils/: data_utils.py  model_utils.py
(+81 files in other folders)
