[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic",
    "datasets",
    "torch",
    "deepspeed==0.15.3",
    "accelerate",
    "peft",
    "joblib>=1.4.2",
    "wandb",
    "rich",
    "trl @ git+https://github.com/huggingface/trl.git",
    "liger-kernel>=0.5.2",
    "vllm==0.7.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib",
    "pandas",
    "tabulate",
]
retrieve = [
    "bm25s[full]",
    "PyStemmer",
    "huggingface_hub",
    "jax[cpu]",
    "httpx",
]
search = [
    "duckduckgo-search",
]
codex = [
    "e2b-code-interpreter",
    "docker",
    "numpy",
    "scipy",
    "sympy",
]