[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate",
    "datasets",
    "deepspeed",
    "joblib>=1.4.2",
    "liger-kernel>=0.5.2",
    "peft",
    "pydantic",
    "python-dotenv",
    "rich",
    "torch",
    "tqdm",
    "trl @ git+https://github.com/huggingface/trl.git",
    "typer",
    "vllm",
    "wandb",
    "nltk",
    "openai",
    "logfire"
]

[project.optional-dependencies]
retrieve = [
    "bm25s",
    "PyStemmer",
    "huggingface_hub",
    "jax[cpu]",
    "httpx",
]
search = [
    "duckduckgo-search",
]
codex = [
    "e2b-code-interpreter",
    "docker",
    "numpy",
    "scipy",
    "sympy",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib",
    "seaborn",
    "pandas",
    "tabulate",
    "dvc",
    "dvc-s3",
]